--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,21 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+    <groupId>io.springfox</groupId>
+    <artifactId>springfox-swagger2</artifactId>
+    <version>2.9.2</version>
+    <scope>compile</scope>
+</dependency>
+
+<dependency>
+    <groupId>io.springfox</groupId>
+    <artifactId>springfox-swagger-ui</artifactId>
+    <version>2.9.2</version>
+    <scope>compile</scope>
+</dependency>
+
     </dependencies>
 
     <properties>
