Add property to indicate main class

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <start-class>com.rest.RESTfulStartup</start-class>
     </properties>
 
 
