--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,57 @@
     <scope>compile</scope>
 </dependency>
 
-    </dependencies>
+       <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+
+
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-data-jpa</artifactId>
+       </dependency>
+
+       <!-- MySQL database driver -->
+       <dependency>
+           <groupId>mysql</groupId>
+           <artifactId>mysql-connector-java</artifactId>
+       </dependency>
+
+       <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+       <dependency>
+           <groupId>org.hibernate</groupId>
+           <artifactId>hibernate-core</artifactId>
+           <version>5.6.7.Final</version>
+       </dependency>
+
+
+       <!-- Hibernate library dependecy start -->
+       <dependency>
+           <groupId>dom4j</groupId>
+           <artifactId>dom4j</artifactId>
+           <version>1.6.1</version>
+       </dependency>
+
+       <dependency>
+           <groupId>commons-logging</groupId>
+           <artifactId>commons-logging</artifactId>
+           <version>1.1.1</version>
+       </dependency>
+
+       <dependency>
+           <groupId>commons-collections</groupId>
+           <artifactId>commons-collections</artifactId>
+           <version>3.2.1</version>
+       </dependency>
+
+       <dependency>
+           <groupId>antlr</groupId>
+           <artifactId>antlr</artifactId>
+           <version>2.7.7</version>
+       </dependency>
+
+       <!-- Hibernate library dependecy end -->
+
+
+   </dependencies>
 
     <properties>
         <java.version>1.8</java.version>
