--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -2,3 +2,19 @@
 server.address=0.0.0.0
 server.port = 9090
 spring.application.name = demoservice
+
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.oracle.url=jdbc:mysql://localhost:3306/diecast_management_db
+spring.datasource.oracle.username=u2cc
+spring.datasource.oracle.password=fr-L9aab
+spring.datasource.oracle.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
+
+
+
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/diecast_management_db?serverTimezone=UTC
+spring.datasource.username=u2cc
+spring.datasource.password=fr-L9aab
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
