Adding Swagger 3 annotations, leaving Swagger 2 legacy codes and annotations for reference purpose

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -3,6 +3,16 @@ server.address=0.0.0.0
 server.port = 9090
 spring.application.name = demoservice
 
+springdoc.api-docs.path=/api-docs
+#The default path was /v3/api-docs, yaml file can be downloaded at http://localhost:9090/api-docs.yaml
+#http://localhost:9090/api-docs
+
+springdoc.swagger-ui.path=/swagger-ui-diecastcars.html
+#We can also customize our UI path, the default is at /swagger-ui.html
+#http://localhost:9090/swagger-ui-diecastcars.html
+
+springdoc.swagger-ui.operationsSorter=method
+
 #spring.jpa.hibernate.ddl-auto=update
 spring.datasource.oracle.url=jdbc:mysql://localhost:3306/diecast_management_db
 spring.datasource.oracle.username=u2cc
@@ -18,3 +28,4 @@ spring.datasource.username=u2cc
 spring.datasource.password=fr-L9aab
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
+
