--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,26 @@
            <artifactId>springdoc-openapi-ui</artifactId>
            <version>1.5.9</version>
        </dependency>
-        
-<!--        <dependency>-->
+
+       <!-- https://mvnrepository.com/artifact/org.jasypt/jasypt -->
+
+        <!-- for CLI encryption/decryption only -->
+       <dependency>
+           <groupId>org.jasypt</groupId>
+           <artifactId>jasypt</artifactId>
+           <version>1.9.3</version>
+       </dependency>
+
+       <dependency>
+           <groupId>com.github.ulisesbocchio</groupId>
+           <artifactId>jasypt-spring-boot</artifactId>
+           <version>3.0.2</version>
+       </dependency>
+
+
+
+
+       <!--        <dependency>-->
 <!--    <groupId>io.springfox</groupId>-->
 <!--    <artifactId>springfox-swagger2</artifactId>-->
 <!--    <version>2.9.2</version>-->
