--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,25 @@
            <version>3.0.2</version>
        </dependency>
 
+        <!--       Spring Security -->
+
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-security</artifactId>
+       </dependency>
+
+       <dependency>
+           <groupId>org.projectlombok</groupId>
+           <artifactId>lombok</artifactId>
+           <version>1.18.24</version>
+       </dependency>
+
+       <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+       <dependency>
+           <groupId>io.jsonwebtoken</groupId>
+           <artifactId>jjwt</artifactId>
+           <version>0.9.1</version>
+       </dependency>
 
 
 
